<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyActivity">


    <TextView
        android:text="@string/tennis01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:typeface="serif"
        android:gravity="center"
        android:textColor="#00FF00"
        android:layout_above="@+id/tennis"/>

    <TextView
        android:text="@string/tennis02"
        android:id="@+id/tennis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:typeface="serif"
        android:gravity="center"
        android:textColor="#FF0000"
        android:layout_above="@+id/button01"/>

    <Button
        android:text="@string/button01"
        android:id="@+id/button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>

